[package]
name = "habasi"
version = "0.3.0"
authors = ["alvazir <basha.alvazir@gmail.com>"]
edition = "2021"
rust-version = "1.74.0"
description = "Habasi - TES3 plugin merging and utility tool"
readme = "README.md"
homepage = "https://www.nexusmods.com/morrowind/mods/53002"
repository = "https://github.com/alvazir/habasi"
license = "GPL-3.0-or-later"
keywords = ["cli", "tes3", "morrowind", "openmw"]
categories = ["command-line-utilities", "game development"]
publish = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies.tes3]
# path = "../tes3"
git = "https://github.com/Greatness7/tes3"
rev = "4a08175f"
# branch = "dev"
default-features = false
features = ["esp"]

[dependencies]
# CLI
clap = { version = "~4.4.10", features = ["derive", "suggestions", "wrap_help"] }
# settings file
confique = { version = "~0.2.4", default-features = false, features = ["toml"] }
# required by confique
serde = "~1.0.193"
# error management
anyhow = "~1.0.75"
# references processing
hashbrown = { version = "~0.14.3", features = ["rayon"] }
# find openmw.cfg
dirs = "~5.0.1"
# find files in parallel
rayon = "~1.8.0"
# better fs errors
fs-err = "~2.11.0"
# find files
walkdir = "~2.4.0"
# create id for sscr with empty id
crc = "~3.0.1"
# provide list of plugins via regex
regex = { version = "~1.10.2", default-features = false, features = ["std", "unicode-case"] }
# provide list of plugins via glob
glob = "~0.3.1"
# provide list of plugins via wildcards
wild = "~2.2.0"
# memory usage
# peak_alloc = "~0.2.0" # disabled due to slowing down the program

[profile.release-lto]
inherits = "release"
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.release-lto-darwin]
inherits = "release"
# strip = true
lto = true
panic = "abort"
codegen-units = 1
